--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.7.1",
+    "cookie-parser": "^1.4.7",
     "cookie-signature": "^1.0.6",
     "debug": "^2.6.9",
     "depd": "^2.0.0",
@@ -44,6 +45,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
+    "jsonwebtoken": "^9.0.2",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^0.3.0",
     "memory-pager": "^1.5.0",
